# cedar_py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  PUBLISHING.md  README.md  build.sh  cleanup_corpus.sh  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: code-quality.md
.github/workflows/: build-test.yml  ci.yml  code-quality.yml
cedar_py/: __init__.py  _rust_importer.py  async_api.py  builders.py  caching.py  cli.py  engine.py  errors.py  models.py  models_old.py  policy.py  testing.py
cedar_py/integrations/: __init__.py  fastapi.py
docs/: CODE_QUALITY.md  TESTING_STRATEGY.md
examples/: basic_usage.py  benchmark.py  cli_example.cedar  document_management_demo.py  example_policy.cedar  test_cases.json
examples/applications/: README.md  async_task_management.py  fastapi_document_management.py  simple_authorization_system.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: cedar_cli  demo_cli_tools.py  demo_improvements.py  quality-check.sh
tests/: README.md  conftest.py  test_basic.py  test_complex.py  test_engine.py  test_integration.py  test_migration.py  test_models.py  test_modernization_summary.py  test_modernized_features_verification.py  test_policy.py
tests/e2e/: conftest.py  test_integration.py  test_integration_improved.py
tests/example_use_cases/: 1a.json  2a.json  2b.json  2c.json  3a.json  3b.json  3c.json  4a.json  4d.json  4e.json  4f.json  5b.json
tests/integration/: test_new_features_integration.py
tests/unit/: test_engine.py  test_engine_improved.py  test_models.py  test_modernized_features.py  test_policy.py  test_policy_improved.py
