[package]
name = "cedar_py_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "cedar_py_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py310"] }
cedar-policy = "4.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
cedar-policy-formatter = "4.5.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.pyo3]
extension-module = true
